fsmc/frontend_antlr/generated/FsmParser.py
# Generated from Fsm.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FsmParser ( Parser ):

    grammarFileName = "Fsm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'machine'", "'module'", "'system'", "'import'", 
                     "','", "'const'", "':'", "'='", "'context'", "'{'", 
                     "'}'", "'events'", "'('", "')'", "'var'", "'.'", "'['", 
                     "']'", "'states'", "'initial'", "'terminal'", "'action'", 
                     "'func'", "'interface'", "'input'", "'ignore'", "'|'", 
                     "'any'", "'else'", "'/'", "'send'", "'say'", "'write'", 
                     "'if'", "'for'", "'in'", "'..'", "'return'", "'-'", 
                     "'*'", "'%'", "'+'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'not'", "'and'", "'or'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ARROW", "DASHES", "ID", 
                      "INT", "STRING", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_unitDecl = 1
    RULE_decl = 2
    RULE_importDecl = 3
    RULE_constDecl = 4
    RULE_contextDecl = 5
    RULE_field = 6
    RULE_eventsDecl = 7
    RULE_eventSig = 8
    RULE_params = 9
    RULE_param = 10
    RULE_typeRef = 11
    RULE_statesDecl = 12
    RULE_initialDecl = 13
    RULE_terminalDecl = 14
    RULE_idList = 15
    RULE_actionDecl = 16
    RULE_funcDecl = 17
    RULE_machineDecl = 18
    RULE_interfaceDecl = 19
    RULE_instanceDecl = 20
    RULE_inputDecl = 21
    RULE_inputRef = 22
    RULE_transition = 23
    RULE_sources = 24
    RULE_source = 25
    RULE_triggers = 26
    RULE_trigger = 27
    RULE_pattern = 28
    RULE_guard = 29
    RULE_calls = 30
    RULE_call = 31
    RULE_sendTarget = 32
    RULE_block = 33
    RULE_stmt = 34
    RULE_varStmt = 35
    RULE_assignStmt = 36
    RULE_sayStmt = 37
    RULE_ifStmt = 38
    RULE_forStmt = 39
    RULE_returnStmt = 40
    RULE_sendStmt = 41
    RULE_callStmt = 42
    RULE_expr = 43

    ruleNames =  [ "program", "unitDecl", "decl", "importDecl", "constDecl", 
                   "contextDecl", "field", "eventsDecl", "eventSig", "params", 
                   "param", "typeRef", "statesDecl", "initialDecl", "terminalDecl", 
                   "idList", "actionDecl", "funcDecl", "machineDecl", "interfaceDecl", 
                   "instanceDecl", "inputDecl", "inputRef", "transition", 
                   "sources", "source", "triggers", "trigger", "pattern", 
                   "guard", "calls", "call", "sendTarget", "block", "stmt", 
                   "varStmt", "assignStmt", "sayStmt", "ifStmt", "forStmt", 
                   "returnStmt", "sendStmt", "callStmt", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    ARROW=54
    DASHES=55
    ID=56
    INT=57
    STRING=58
    COMMENT=59
    WS=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FsmParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UnitFileContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FsmParser.ProgramContext
            super().__init__(parser)
            self.kind = None # Token
            self.name = None # Token
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(FsmParser.EOF, 0)
        def ID(self):
            return self.getToken(FsmParser.ID, 0)
        def unitDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.UnitDeclContext)
            else:
                return self.getTypedRuleContext(FsmParser.UnitDeclContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitFile" ):
                return visitor.visitUnitFile(self)
            else:
                return visitor.visitChildren(self)


    class MachineFileContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FsmParser.ProgramContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(FsmParser.EOF, 0)
        def ID(self):
            return self.getToken(FsmParser.ID, 0)
        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.DeclContext)
            else:
                return self.getTypedRuleContext(FsmParser.DeclContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMachineFile" ):
                return visitor.visitMachineFile(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = FsmParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = FsmParser.MachineFileContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(FsmParser.T__0)
                self.state = 89
                localctx.name = self.match(FsmParser.ID)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594322621008) != 0):
                    self.state = 90
                    self.decl()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 96
                self.match(FsmParser.EOF)
                pass
            elif token in [2, 3]:
                localctx = FsmParser.UnitFileContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                localctx.kind = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==2 or _la==3):
                    localctx.kind = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 98
                localctx.name = self.match(FsmParser.ID)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594100842578) != 0):
                    self.state = 99
                    self.unitDecl()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 105
                self.match(FsmParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDecl(self):
            return self.getTypedRuleContext(FsmParser.ImportDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(FsmParser.ConstDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(FsmParser.FuncDeclContext,0)


        def actionDecl(self):
            return self.getTypedRuleContext(FsmParser.ActionDeclContext,0)


        def interfaceDecl(self):
            return self.getTypedRuleContext(FsmParser.InterfaceDeclContext,0)


        def machineDecl(self):
            return self.getTypedRuleContext(FsmParser.MachineDeclContext,0)


        def instanceDecl(self):
            return self.getTypedRuleContext(FsmParser.InstanceDeclContext,0)


        def inputDecl(self):
            return self.getTypedRuleContext(FsmParser.InputDeclContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_unitDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitDecl" ):
                return visitor.visitUnitDecl(self)
            else:
                return visitor.visitChildren(self)




    def unitDecl(self):

        localctx = FsmParser.UnitDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unitDecl)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.importDecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.constDecl()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.funcDecl()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.actionDecl()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.interfaceDecl()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.machineDecl()
                pass
            elif token in [56]:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.instanceDecl()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 8)
                self.state = 115
                self.inputDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDecl(self):
            return self.getTypedRuleContext(FsmParser.ImportDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(FsmParser.ConstDeclContext,0)


        def contextDecl(self):
            return self.getTypedRuleContext(FsmParser.ContextDeclContext,0)


        def eventsDecl(self):
            return self.getTypedRuleContext(FsmParser.EventsDeclContext,0)


        def statesDecl(self):
            return self.getTypedRuleContext(FsmParser.StatesDeclContext,0)


        def initialDecl(self):
            return self.getTypedRuleContext(FsmParser.InitialDeclContext,0)


        def terminalDecl(self):
            return self.getTypedRuleContext(FsmParser.TerminalDeclContext,0)


        def actionDecl(self):
            return self.getTypedRuleContext(FsmParser.ActionDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(FsmParser.FuncDeclContext,0)


        def transition(self):
            return self.getTypedRuleContext(FsmParser.TransitionContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = FsmParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.importDecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.constDecl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.contextDecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.eventsDecl()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.statesDecl()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.initialDecl()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 124
                self.terminalDecl()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 8)
                self.state = 125
                self.actionDecl()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 9)
                self.state = 126
                self.funcDecl()
                pass
            elif token in [28, 56]:
                self.enterOuterAlt(localctx, 10)
                self.state = 127
                self.transition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FsmParser.ID)
            else:
                return self.getToken(FsmParser.ID, i)

        def getRuleIndex(self):
            return FsmParser.RULE_importDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = FsmParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(FsmParser.T__3)
            self.state = 131
            self.match(FsmParser.ID)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 132
                self.match(FsmParser.T__4)
                self.state = 133
                self.match(FsmParser.ID)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.ty = None # TypeRefContext

        def expr(self):
            return self.getTypedRuleContext(FsmParser.ExprContext,0)


        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def typeRef(self):
            return self.getTypedRuleContext(FsmParser.TypeRefContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_constDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = FsmParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(FsmParser.T__5)
            self.state = 140
            localctx.name = self.match(FsmParser.ID)
            self.state = 141
            self.match(FsmParser.T__6)
            self.state = 142
            localctx.ty = self.typeRef()
            self.state = 143
            self.match(FsmParser.T__7)
            self.state = 144
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.FieldContext)
            else:
                return self.getTypedRuleContext(FsmParser.FieldContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_contextDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContextDecl" ):
                return visitor.visitContextDecl(self)
            else:
                return visitor.visitChildren(self)




    def contextDecl(self):

        localctx = FsmParser.ContextDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_contextDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(FsmParser.T__8)
            self.state = 147
            self.match(FsmParser.T__9)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 148
                self.field()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5 or _la==56:
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==5:
                        self.state = 149
                        self.match(FsmParser.T__4)


                    self.state = 152
                    self.field()
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 160
            self.match(FsmParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.ty = None # TypeRefContext

        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def typeRef(self):
            return self.getTypedRuleContext(FsmParser.TypeRefContext,0)


        def expr(self):
            return self.getTypedRuleContext(FsmParser.ExprContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = FsmParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            localctx.name = self.match(FsmParser.ID)
            self.state = 163
            self.match(FsmParser.T__6)
            self.state = 164
            localctx.ty = self.typeRef()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 165
                self.match(FsmParser.T__7)
                self.state = 166
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventsDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventSig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.EventSigContext)
            else:
                return self.getTypedRuleContext(FsmParser.EventSigContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_eventsDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventsDecl" ):
                return visitor.visitEventsDecl(self)
            else:
                return visitor.visitChildren(self)




    def eventsDecl(self):

        localctx = FsmParser.EventsDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eventsDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(FsmParser.T__11)
            self.state = 170
            self.match(FsmParser.T__9)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 171
                self.eventSig()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5 or _la==56:
                    self.state = 173
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==5:
                        self.state = 172
                        self.match(FsmParser.T__4)


                    self.state = 175
                    self.eventSig()
                    self.state = 180
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 183
            self.match(FsmParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventSigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(FsmParser.ParamsContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_eventSig

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventSig" ):
                return visitor.visitEventSig(self)
            else:
                return visitor.visitChildren(self)




    def eventSig(self):

        localctx = FsmParser.EventSigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_eventSig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            localctx.name = self.match(FsmParser.ID)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 186
                self.match(FsmParser.T__12)
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15 or _la==56:
                    self.state = 187
                    self.params()


                self.state = 190
                self.match(FsmParser.T__13)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.ParamContext)
            else:
                return self.getTypedRuleContext(FsmParser.ParamContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = FsmParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.param()
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 194
                self.match(FsmParser.T__4)
                self.state = 195
                self.param()
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.byref = None # Token
            self.name = None # Token
            self.ty = None # TypeRefContext

        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def typeRef(self):
            return self.getTypedRuleContext(FsmParser.TypeRefContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):
